get all players by groupe_id
