# routes/api.php
@@ -50,6 +50,7 @@ Route::apiResource('reservations',ReservationController::class);
 Route::apiResource('groupes',GroupeController::class);
 Route::get('/groupe/{groupeId}/tirage', [GroupeController::class, 'effectuerTirageAuSort']);
 Route::apiResource('games',GameController::class);
+Route::get('/groupes/{groupe}/games', [GameController::class, 'gameByGroup']);
 
 Route::get('/evenements/category/{id}', [EvenementController::class, 'filterEvent']);
 
